--- a/Sora_Rithwik_Tyler.ipynb
+++ b/Sora_Rithwik_Tyler.ipynb
@@ -3,12 +3,11 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Sora Rithwik Tyler.ipynb",
+      "name": "Sora_Rithwik_Tyler.ipynb",
       "provenance": [],
       "private_outputs": true,
       "collapsed_sections": [],
-      "toc_visible": true,
-      "include_colab_link": true
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,16 +15,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/skberkeley/c3.ai-COVID-19-Challenge/blob/main/Sora_Rithwik_Tyler.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "code",
       "metadata": {
@@ -38,7 +27,7 @@
         "from scipy.stats import gamma\n",
         "import numpy as np"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -53,11 +42,7 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "eC5ux7Y0yAkW",
-        "outputId": "c58e16c7-ac0a-45d7-a6c6-1cf70cb81649",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "eC5ux7Y0yAkW"
       },
       "source": [
         "from google.colab import drive\n",
@@ -66,16 +51,8 @@
         "sys.path.append('/content/drive/My Drive/C3.ai COVID Challenge')\n",
         "import c3aidatalake"
       ],
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "Mounted at /content/drive/\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -104,7 +81,7 @@
         "        }\n",
         "    })"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -123,41 +100,14 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "X8FzasrVISoO",
-        "outputId": "96d0b6ff-ebed-492b-ea6e-ceb631581be3",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "X8FzasrVISoO"
       },
       "source": [
         "statePolicies = policies.drop(44)\n",
         "statePolicies.columns"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Index(['easingOrder', 'stayAtHome', 'mandatoryQuarantine',\n",
-              "       'nonEssentialBusiness', 'largeGatherings', 'schoolClosure',\n",
-              "       'restaurantLimit', 'barClosures', 'faceCoveringRequirement',\n",
-              "       'PrimaryElectionPostponement', 'emergencyDeclaration',\n",
-              "       'waiveTreatmentCost', 'freeVaccine',\n",
-              "       'waiverOfPriorAuthorizationRequirements', 'prescriptionRefill',\n",
-              "       'premiumPaymentGracePeriod', 'marketplaceSpecialEnrollmentPeriod',\n",
-              "       'section1135Waiver', 'paidSickLeaves',\n",
-              "       'expandsAccesstoTelehealthServices', 'id', 'lastSavedTimestamp',\n",
-              "       'numSavedVersions', 'savedVersion', 'location.id'],\n",
-              "      dtype='object')"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 5
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -217,6 +167,26 @@
       ],
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "2HCWbLSrqbta"
+      },
+      "source": [
+        "! ls -al ~/.ssh"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "n2riepdnrwmU"
+      },
+      "source": [
+        "test\n"
+      ]
     }
   ]
 }
