Added quantifying dicts for locationpolicysummary up to emergencyDeclaration

--- a/Sora_Rithwik_Tyler.ipynb
+++ b/Sora_Rithwik_Tyler.ipynb
@@ -64,7 +64,8 @@
         "- Quantify government policy categories (LocationPolicySummary)\n",
         "    - Bigger values for more restrictive policies\n",
         "- Convert economic data to usable format\n",
-        "- Produce/visualize distributions and general statistics for data\n"
+        "- Produce/visualize distributions and general statistics for data\n",
+        "    - Visualize dates of latest policies for states\n"
       ]
     },
     {
@@ -119,15 +120,17 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "wlAzCZVfSMjM"
+        "id": "tIX17nMTwsCw"
       },
       "source": [
-        "printColValCounts(statePolicies, \"mandatoryQuarantine\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+        "Sora's Dictionaries:\n",
+        "'mandatoryQuarantine',\n",
+        "       'nonEssentialBusiness', 'largeGatherings', 'schoolClosure',\n",
+        "       'restaurantLimit', 'barClosures', 'faceCoveringRequirement',\n",
+        "       'PrimaryElectionPostponement', 'emergencyDeclaration',\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -144,49 +147,75 @@
         "}\n",
         "quantifyDicts[\"stayAtHome\"] = {\n",
         "    \"No Action\" : 0,\n",
-        "    \"Lifted\" : 1,\n",
-        "    \"Rolled Back to High Risk Groups\" : 2,\n",
-        "    \"New Stay at Home Order\" : 3,\n",
-        "    \"Statewide\" : 4\n",
+        "    \"Lifted\" : 0,\n",
+        "    \"Rolled Back to High Risk Groups\" : 1,\n",
+        "    \"New Stay at Home Order\" : 2,\n",
+        "    \"Statewide\" : 2\n",
         "}\n",
         "quantifyDicts[\"mandatoryQuarantine\"]  = {\n",
-        "    \n",
-        "}  "
+        "    \"No Action\" : 0,\n",
+        "    \"Lifted\" : 0,\n",
+        "    \"From Certain States (New)\" : 1,\n",
+        "    \"Rolled Back to Certain States\" : 1,\n",
+        "    \"From Certain States\" : 1,\n",
+        "    \"Rolled Back to International Travel\" : 2,\n",
+        "    \"All Travelers\" : 3\n",
+        "}\n",
+        "quantifyDicts[\"nonEssentialBusiness\"] = {\n",
+        "    \"No Action\" : 0,\n",
+        "    \"All Non-Essential Businesses Permitted to Reopen\" : 0,\n",
+        "    \"Some Non-Essential Businesses Permitted to Reopen\" : 1,\n",
+        "    \"All Non-Essential Businesses Permitted to Reopen with Reduced Capacity\" : 1,\n",
+        "    \"Some Non-Essential Businesses Permitted to Reopen with Reduced Capacity\" : 2,\n",
+        "    \"New Business Closures or Limits\" : 3\n",
+        "}\n",
+        "quantifyDicts[\"largeGatherings\"] = {\n",
+        "    \"Lifted\" : 0,\n",
+        "    \"No Action\" : 0,\n",
+        "    \"Expanded to New Limit Above 25\" : 1,\n",
+        "    \"New Limit on Large Gatherings in Place\" : 1,\n",
+        "    \"Expanded to New Limit of 25 or Fewer\" : 2,\n",
+        "    \">10 People Prohibited\" : 3,\n",
+        "    \"All Gatherings Prohibited\" : 4\n",
+        "}\n",
+        "quantifyDicts[\"schoolClosure\"] = {\n",
+        "    \"Rescinded\" : 0,\n",
+        "    \"Recommended Closure for School Year\" : 1,\n",
+        "    \"Recommended Closure\" : 2,\n",
+        "    \"Closed for School Year\" : 3,\n",
+        "    \"Closed\" : 4\n",
+        "}\n",
+        "quantifyDicts[\"restaurantLimit\"] = {\n",
+        "    \"No Action\" : 0,\n",
+        "    \"Reopened to Dine-in Service\" : 1,\n",
+        "    \"Reopened to Dine-in Service with Capacity Limits\" : 2,\n",
+        "    \"New Service Limits\" : 3,\n",
+        "    \"Newly Closed to Dine-in Service\" : 3\n",
+        "}\n",
+        "quantifyDicts[\"barClosures\"] = {\n",
+        "    \"Reopened\" : 0,\n",
+        "    \"New Service Limits\" : 1,\n",
+        "    \"Closed\" : 2,\n",
+        "    \"Newly Closed\" : 2\n",
+        "}\n",
+        "quantifyDicts[\"faceCoveringRequirement\"] = {\n",
+        "    \"No\" : 0,\n",
+        "    \"Required for Certain Employees\" : 1,\n",
+        "    \"Allows Local Officals to Require for General Public\" : 1,\n",
+        "    \"Required for Certain Employees; Allows Local Officials to Require for General Public\" : 1,\n",
+        "    \"Required for General Public\" : 2\n",
+        "}\n",
+        "quantifyDicts[\"PrimaryElectionPostponement\"] = {\n",
+        "    \"No\" : 0,\n",
+        "    \"Postponed\" : 1,\n",
+        "    \"Canceled\" : 2\n",
+        "}\n",
+        "quantifyDicts[\"emergencyDeclaration\"] = {\n",
+        "    \"Yes\" : 0\n",
+        "}"
       ],
       "execution_count": null,
       "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "XWcI0PbYkNDA"
-      },
-      "source": [
-        "def applyDict(val, colName, refDict):\n",
-        "    "
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "2HCWbLSrqbta"
-      },
-      "source": [
-        "! ls -al ~/.ssh"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "n2riepdnrwmU"
-      },
-      "source": [
-        "test\n"
-      ]
     }
   ]
 }
