Added mapper generator for locationPolicySummary using quantifying dicts

--- a/Sora_Rithwik_Tyler.ipynb
+++ b/Sora_Rithwik_Tyler.ipynb
@@ -31,6 +31,17 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8z8XncOB42tx"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "T2Zouv-gyEVZ"
@@ -213,6 +224,20 @@
         "quantifyDicts[\"emergencyDeclaration\"] = {\n",
         "    \"Yes\" : 0\n",
         "}"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S64Eg_rJ3l0R"
+      },
+      "source": [
+        "def mapperGenerator(colName):\n",
+        "    def mapper(val):\n",
+        "        return quantifyDicts[colName][val]\n",
+        "    return mapper"
       ],
       "execution_count": null,
       "outputs": []
