Incorporated Tyler's dictionaries

--- a/Sora_Rithwik_Tyler.ipynb
+++ b/Sora_Rithwik_Tyler.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "id": "8z8XncOB42tx"
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "id": "Dy6zIMzOS_bR"
    },
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "id": "X8FzasrVISoO"
    },
@@ -93,7 +93,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,6 +101,35 @@
    "source": [
     "statePolicies = policies.drop(44)\n",
     "statePolicies.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Missing: waiveTreatmentCost\n",
+      "Missing: waiverOfPriorAuthorizationRequirements\n",
+      "Missing: prescriptionRefill\n",
+      "Missing: section1135Waiver\n",
+      "Missing: id\n",
+      "Missing: lastSavedTimestamp\n",
+      "Missing: numSavedVersions\n",
+      "Missing: savedVersion\n",
+      "Missing: location.id\n",
+      "done\n"
+     ]
+    }
+   ],
+   "source": [
+    "for col in statePolicies:\n",
+    "    if not (col in quantifyDicts.keys()):\n",
+    "        print(\"Missing: \" + col)\n",
+    "print(\"done\")"
    ]
   },
   {
@@ -127,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {
     "id": "ZMR1jSGRUz4w"
    },
@@ -207,6 +236,51 @@
     "}\n",
     "quantifyDicts[\"emergencyDeclaration\"] = {\n",
     "    \"Yes\" : 0\n",
+    "}\n",
+    "quantifyDicts[\"waiveTreatmentCost\"]  = {\n",
+    "    \"No Action\" : 0,\n",
+    "    \"State-Insurer Agreement\" : 1,\n",
+    "    \"State Requires\" : 2\n",
+    "}  \n",
+    "quantifyDicts[\"freeVaccine\"] = {\n",
+    "    \"No Action\" : 0,\n",
+    "    \"State-Insurer Agreement\" : 1,\n",
+    "    \"State Requires\" : 2\n",
+    "}\n",
+    "quantifyDicts[\"waiverOfPriorAuthorizationRequirements\"] = {\n",
+    "    \"No  Action\" : 0,\n",
+    "    \"For COVID-19 Testing\" : 1,\n",
+    "    \"For COVID-19 Testing and Treatment\" : 2\n",
+    "}\n",
+    "quantifyDicts[\"prescriptionRefill\"] = {\n",
+    "    \"No Action\" : 0,\n",
+    "    \"Expired\" : 1,\n",
+    "    \"State Requires\" : 2\n",
+    "}\n",
+    "quantifyDicts[\"premiumPaymentGracePeriod\"] = {\n",
+    "    \"No Action\" : 0,\n",
+    "    \"Expired\" : 1,\n",
+    "    \"COVID-19 Diagnosis/Impacts Only\" : 2,\n",
+    "    \"Grace Period extended for All Individual Policies\" : 3,\n",
+    "    \"All Policies\" : 4\n",
+    "}\n",
+    "quantifyDicts[\"marketplaceSpecialEnrollmentPeriod\"] = {\n",
+    "    \"No\" : 0,\n",
+    "    \"Ended\" : 1,\n",
+    "    \"Active\" : 2\n",
+    "}\n",
+    "quantifyDicts[\"section1135Waiver\"] = {\n",
+    "    \"Unapproved\" : 0,\n",
+    "    \"Approved\" : 1\n",
+    "}\n",
+    "quantifyDicts[\"paidSickLeaves\"] = {\n",
+    "    \"No Action\" : 0,\n",
+    "    \"Proposed - March 2020\" : 1,\n",
+    "    \"Enacted\" : 2\n",
+    "}\n",
+    "quantifyDicts[\"expandsAccesstoTelehealthServices\"] = {\n",
+    "    \"no\" : 0,\n",
+    "    \"yes\" : 1\n",
     "}"
    ]
   },
@@ -219,6 +293,7 @@
    "outputs": [],
    "source": [
     "def mapperGenerator(colName):\n",
+    "    \n",
     "    def mapper(val):\n",
     "        return quantifyDicts[colName][val]\n",
     "    return mapper"
