Fixed Tyler's dictionaries and quantified data in Policies

--- a/Sora_Rithwik_Tyler.ipynb
+++ b/Sora_Rithwik_Tyler.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "6FNqVPqZor8O"
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "id": "8z8XncOB42tx"
    },
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "id": "Dy6zIMzOS_bR"
    },
@@ -59,77 +59,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "id": "LxFQ3qVQPhQe"
-   },
-   "outputs": [],
-   "source": [
-    "def printColValCounts(df, colName):\n",
-    "    print(\"Column Name: \" + colName)\n",
-    "    print(df[colName].value_counts())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {
     "id": "X8FzasrVISoO"
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['easingOrder', 'stayAtHome', 'mandatoryQuarantine',\n",
-       "       'nonEssentialBusiness', 'largeGatherings', 'schoolClosure',\n",
-       "       'restaurantLimit', 'barClosures', 'faceCoveringRequirement',\n",
-       "       'PrimaryElectionPostponement', 'emergencyDeclaration',\n",
-       "       'waiveTreatmentCost', 'freeVaccine',\n",
-       "       'waiverOfPriorAuthorizationRequirements', 'prescriptionRefill',\n",
-       "       'premiumPaymentGracePeriod', 'marketplaceSpecialEnrollmentPeriod',\n",
-       "       'section1135Waiver', 'paidSickLeaves',\n",
-       "       'expandsAccesstoTelehealthServices', 'id', 'lastSavedTimestamp',\n",
-       "       'numSavedVersions', 'savedVersion', 'location.id'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "statePolicies = policies.drop(44)\n",
-    "statePolicies.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Missing: waiveTreatmentCost\n",
-      "Missing: waiverOfPriorAuthorizationRequirements\n",
-      "Missing: prescriptionRefill\n",
-      "Missing: section1135Waiver\n",
-      "Missing: id\n",
-      "Missing: lastSavedTimestamp\n",
-      "Missing: numSavedVersions\n",
-      "Missing: savedVersion\n",
-      "Missing: location.id\n",
-      "done\n"
-     ]
-    }
-   ],
-   "source": [
-    "for col in statePolicies:\n",
-    "    if not (col in quantifyDicts.keys()):\n",
-    "        print(\"Missing: \" + col)\n",
-    "print(\"done\")"
+    "statePolicies = policies.drop(44)"
    ]
   },
   {
@@ -156,12 +92,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {
     "id": "ZMR1jSGRUz4w"
    },
    "outputs": [],
    "source": [
+    "{\n",
+    "    \"tags\": [\n",
+    "        \"hide-input\",\n",
+    "    ]\n",
+    "}\n",
     "quantifyDicts = {}\n",
     "quantifyDicts[\"easingOrder\"] = {\n",
     "    \"Reopened\" : 0, \n",
@@ -248,7 +189,7 @@
     "    \"State Requires\" : 2\n",
     "}\n",
     "quantifyDicts[\"waiverOfPriorAuthorizationRequirements\"] = {\n",
-    "    \"No  Action\" : 0,\n",
+    "    \"No Action\" : 0,\n",
     "    \"For COVID-19 Testing\" : 1,\n",
     "    \"For COVID-19 Testing and Treatment\" : 2\n",
     "}\n",
@@ -286,18 +227,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {
     "id": "S64Eg_rJ3l0R"
    },
    "outputs": [],
    "source": [
     "def mapperGenerator(colName):\n",
-    "    \n",
-    "    def mapper(val):\n",
-    "        return quantifyDicts[colName][val]\n",
+    "    if colName in quantifyDicts.keys():\n",
+    "        def mapper(val):\n",
+    "            return quantifyDicts[colName][val]\n",
+    "    else:\n",
+    "        def mapper(val):\n",
+    "            return val\n",
     "    return mapper"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Grace Period Extended for All Individual Policies'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-93717c117fc2>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mcol\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mstatePolicies\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0mmper\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmapperGenerator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m     \u001b[0mstatePolicies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstatePolicies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcol\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmper\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mstatePolicies\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/usr/local/lib/python3.8/site-packages/pandas/core/series.py\u001b[0m in \u001b[0;36mapply\u001b[0;34m(self, func, convert_dtype, args, **kwds)\u001b[0m\n\u001b[1;32m   4198\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4199\u001b[0m                 \u001b[0mvalues\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mobject\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 4200\u001b[0;31m                 \u001b[0mmapped\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmap_infer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mconvert\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mconvert_dtype\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   4201\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   4202\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmapped\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSeries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32mpandas/_libs/lib.pyx\u001b[0m in \u001b[0;36mpandas._libs.lib.map_infer\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-30-6b246400028c>\u001b[0m in \u001b[0;36mmapper\u001b[0;34m(val)\u001b[0m\n\u001b[1;32m      2\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcolName\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mquantifyDicts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mmapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mquantifyDicts\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mcolName\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m     \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m         \u001b[0;32mdef\u001b[0m \u001b[0mmapper\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'Grace Period Extended for All Individual Policies'"
+     ]
+    }
+   ],
+   "source": [
+    "for col in statePolicies.columns:\n",
+    "    mper = mapperGenerator(col)\n",
+    "    statePolicies[col] = statePolicies[col].apply(mper)\n",
+    "statePolicies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -327,5 +305,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 4
 }
