--- a/Sora_Rithwik_Tyler.ipynb
+++ b/Sora_Rithwik_Tyler.ipynb
@@ -59,7 +59,10 @@
         "  return timeFormat(s).timestamp()\n",
         "\n",
         "# How to convert column of date strings to these above formats:\n",
-        "# df[\"dateStringsColumn\"] = df[\"dateStringsColumn\"].apply(timeFormat)"
+        "# DFtimeFormat(dataframe name, string of column header which contains the time strings)\n",
+        "def DFtimeFormat(df, column_of_timestrings):\n",
+        "  df[column_of_timestrings] = df[column_of_timestrings].apply(timeFormat)\n",
+        "  return"
       ],
       "execution_count": null,
       "outputs": []
