Added date time func to Sora... notebook

--- a/Sora_Rithwik_Tyler.ipynb
+++ b/Sora_Rithwik_Tyler.ipynb
@@ -27,6 +27,29 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Returns datetime object of the given date string\n",
+    "# Compare dates with >, <, or ==\n",
+    "def timeFormat(s):\n",
+    "  return datetime.strptime(s, \"%Y-%m-%dT%H:%M:%SZ\")\n",
+    "\n",
+    "# Returns float timestamp (seconds since 1 Jan 1970)\n",
+    "# Compare timestamps with >, <, or ==\n",
+    "def timestampFormat(s):\n",
+    "  return timeFormat(s).timestamp()\n",
+    "\n",
+    "# How to convert column of date strings to these above formats:\n",
+    "# DFtimeFormat(dataframe name, string of column header which contains the time strings)\n",
+    "def DFtimeFormat(df, column_of_timestrings):\n",
+    "  df[column_of_timestrings] = df[column_of_timestrings].apply(timeFormat)\n",
+    "  return"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "8ol1gLjTo2OY"
